atualizações do site para projeto do site cliente

--- a/contato.html
+++ b/contato.html
@@ -3,36 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contato</title>
+    <title>Contato | VT Tattoo</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-rO9mTFnHfbTtq3GJApbQsLEK3yDSfW+EP+UoYmrnfhZf3RMG+5a7U6Fjx+72BnJ9zZz5HNmG3JRWyCQ3zMv9qw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <!-- Menu de Navegação -->
     <nav>
         <ul>
             <li><a href="index.html">Início</a></li>
             <li><a href="historia.html">História</a></li>
-            <li>
             <li><a href="localização.html">Localização</a></li>
+            <li><a href="artes.html">Artes</a></li>
             <li>
-            <li><a href="#">Artes</a></li>
-            <li>
-                <a>Cadastros</a>
+                <a href="#">Entrar</a>
                 <ul class="submenu">
-                    <li><a href="registrar.html">Regsitrar-se</a></li>
+                    <li><a href="registrar.html">Registrar-se</a></li>
                     <li><a href="login.html">Entrar</a></li>
                 </ul>
             </li>
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
-<h2>Redes sociais para contato</h2>
 
-<h4>Instagram: @vt_tattoo </h4>
+    <!-- Seção de Contato -->
+    <section class="contato-section">
+        <h2>Entre em Contato</h2>
+        <p>Fique à vontade para falar com a gente pelas redes sociais ou WhatsApp!</p>
 
-<h4>Whatsapp: 11 91234-5678</h4>
+        <div class="redes-sociais">
+            <a href="https://instagram.com/" target="_blank">
+                <i class="instagram"></i> @vt_tattoo
+            </a>
+            <a href="https://wa.me/5511959627366" target="_blank">
+                <i class="whatsapp"></i> +55 11 95962-7366
+            </a>
+            <a href="https://facebook.com/vt_tattoo" target="_blank">
+                <i class="facebook"></i> VT Tattoo
+            </a>
+        </div>
+    </section>
 
-<h4>Facebook:Vt_tattoo</h4>
-
-
+    <footer>
+        <p>&copy; 2025 VT Tattoo. Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
