--- a/login.html
+++ b/login.html
@@ -14,9 +14,9 @@
             <li>
             <li><a href="localização.html">Localização</a></li>
             <li>
-            <li><a href="#">Artes</a></li>
+            <li><a href="artes.html">Artes</a></li>
             <li>
-                <a>Cadastros</a>
+                <a>Entrar</a>
                 <ul class="submenu">
                     <li><a href="registrar.html">Regsitrar-se</a></li>
                     <li><a href="login.html">Entrar</a></li>
@@ -34,12 +34,13 @@
                 <input type="text" id="txtUsuario" name="txtUsuario" placeholder="Digite seu usuário" required>
             </div>
             <div class="input-group">
-                <label for="txtSenha">Usuário</label>
+                <label for="txtSenha">Senha</label>
                 <input type="password" id="txtSenha" name="txtSenha" placeholder="Digite sua senha" required>
             </div>
 
-            <button type="submit">Entrar</button>
+            <button type="submit" onclick ='acionarBotao()' >Entrar</button>
         </form>
     </div>
+    <script src="login.js"></script>
 </body>
 </html>
