--- a/index.html
+++ b/index.html
@@ -3,29 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu de Navegacao</title>
+    <title>VT Tattoo</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Menu de navegação -->
     <nav>
         <ul>
             <li><a href="index.html">Início</a></li>
             <li><a href="historia.html">História</a></li>
-            <li>
             <li><a href="localização.html">Localização</a></li>
+            <li><a href="artes.html">Artes</a></li>
             <li>
-            <li><a href="#">Artes</a></li>
-            <li>
-                <a>Cadastros</a>
+                <a href="#">Entrar</a>
                 <ul class="submenu">
-                    <li><a href="registrar.html">Regsitrar-se</a></li>
+                    <li><a href="registrar.html">Registrar-se</a></li>
                     <li><a href="login.html">Entrar</a></li>
                 </ul>
             </li>
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
-    <div class = "cursor"></div>
-    <h2> VT Tattoo</h2>
+
+   
+    <header class="hero">
+        <div class="hero-content">
+            <h1>VT Tattoo</h1>
+            <p>Arte na pele com identidade e atitude</p>
+            <a href="artes.html" class="btn-destaque">Ver Portfólio</a>
+        </div>
+    </header>
+
+    
+    <div class="destaques">
+        <div class="destaque-item">
+            <h3>+10 anos de experiência</h3>
+            <p>Profissionais premiados e especializados em diversos estilos.</p>
+        </div>
+        <div class="destaque-item">
+            <h3>Atendimento exclusivo</h3>
+            <p>Consultoria artística personalizada para cada cliente.</p>
+        </div>
+        <div class="destaque-item">
+            <h3>Ambiente seguro</h3>
+            <p>Equipamentos esterilizados e ambiente confortável.</p>
+        </div>
+    </div>
+
+    
+    <div class="chamada-agendamento">
+        <h2>Pronto pra sua nova tattoo?</h2>
+        <p>Entre em contato com a nossa equipe ou agende um horário agora mesmo!</p>
+        <br><br><br>
+        <a href="contato.html" class="btn-destaque">Fale Conosco</a>
+    </div>
+
+    <footer>
+        <p>&copy; 2025 VT Tattoo. Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
