--- a/registrar.html
+++ b/registrar.html
@@ -14,9 +14,9 @@
             <li>
             <li><a href="localização.html">Localização</a></li>
             <li>
-            <li><a href="#">Artes</a></li>
+            <li><a href="artes.html">Artes</a></li>
             <li>
-                <a>Cadastros</a>
+                <a>Entrar</a>
                 <ul class="submenu">
                     <li><a href="registrar.html">Regsitrar-se</a></li>
                     <li><a href="login.html">Entrar</a></li>
